<?xml version="1.0" encoding="UTF-8"?>
<!--

    (c) Copyright 2024-2024, ANS. All rights reserved.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.gouv.esante.apim.checkrules</groupId>
    <artifactId>check-apim-rules-parent</artifactId>
    <version>0.0.3-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>apim-ruleschecker</name>
    <inceptionYear>2024</inceptionYear>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <spring.version>3.3.3</spring.version>
        <jackson.version>0.2.6</jackson.version>
        <junit.version>5.11.0</junit.version>
        <wiremock.version>3.9.1</wiremock.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springdoc.version>2.2.0</springdoc.version>
        <license.current.year>2024</license.current.year>
    </properties>

    <modules>
        <module>gravitee-client</module>
        <module>ruleschecker</module>
    </modules>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-autoconfigure</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openapitools</groupId>
                <artifactId>jackson-databind-nullable</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock-jetty12</artifactId>
                <version>${wiremock.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>4.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>initialize</phase>
                    </execution>
                </executions>
                <configuration>
                    <header>licence-header.txt</header>
                    <properties>
                        <!--
                          This license current year is computed. If we wanted to rebuild an old version without
                          changing license headers, we would just need to add -Dlicense.current.year=XXX to the maven command line.
                        -->
                        <yearSpan>${inceptionYear}-${license.current.year}</yearSpan>
                    </properties>
                    <mapping>
                        <Jenkinsfile>JAVADOC_STYLE</Jenkinsfile>
                        <hcl>SCRIPT_STYLE</hcl>
                        <nomad.tpl>SCRIPT_STYLE</nomad.tpl>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                    <excludes>
                        <exclude>**/ASIPGlobalSettings.xml</exclude>
                        <exclude>**/ASIPProfilesSettings.xml</exclude>
                        <exclude>**/dependency-check-report.xml</exclude>
                        <exclude>reports/report.html</exclude>
                        <exclude>**/messages*</exclude>
                    </excludes>
                    <aggregate>false</aggregate>
                    <strictCheck>true</strictCheck>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>